--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
-  <a md-button routerLink=".">Login App</a>
+  <a class="header-title" routerLink=".">Login App</a>
   <span class="remaining-space"></span>
   <a md-button routerLink=".">Login</a>
   <a md-button routerLink="."><md-icon class="icon">settings</md-icon></a>
