--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,18 +4,16 @@
     <form [formGroup]="form" class="basic-form">
       <md-form-field class="full-width-controll">
         <input type="email" mdInput placeholder="メースアドレス" formControlName="email" >
-        <md-error>
-          {{formErrors}}
+        <md-error *ngIf="formErrors.email">
+          {{ formErrors.email }}
         </md-error>
-      <!--
-        <md-error *ngIf="email.hasError('required')">
-          Email is <strong>required</strong>
-        </md-error>
-        -->
       </md-form-field>
       <br>
       <md-form-field>
           <input type="password" mdInput placeholder="パスワード" formControlName="password">
+          <md-error *ngIf="formErrors.password">
+            {{ formErrors.password }}
+          </md-error>
       </md-form-field>
       <br>
       <button md-raised-button color="primary" (click)="login();" >ログイン</button>
