AngularとAngular-Materialを最新化し、破壊的変更に対応。

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <a class="header-title" routerLink=".">{{ headerTitle }}</a>
   <span class="remaining-space"></span>
   <ng-container *ngIf="isLogin() == false">
-    <a md-button routerLink=".">Login</a>
+    <a mat-button routerLink=".">Login</a>
   </ng-container>
 
   <ng-container *ngIf="isLogin() == true">
-    <a md-button (click)="logout()" >Logout</a>
-    <a md-button routerLink="."><md-icon class="icon">settings</md-icon></a>
+    <a mat-button (click)="logout()" >Logout</a>
+    <a mat-button routerLink="."><mat-icon class="icon">settings</mat-icon></a>
   </ng-container>
 
-</md-toolbar>
+</mat-toolbar>
