ユーザの新規登録機能を追加（正常パターンのみ）

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,7 @@
       <mat-error *ngIf="loginErrorMessage">
         {{loginErrorMessage}}
       </mat-error>
+      <button mat-button (click)="moveSignUp()" >新規登録</button>
     </form>
   </mat-card-content>
 </mat-card>
