--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -23,15 +23,12 @@
       </mat-form-field>
       <br>
       <mat-form-field>
-        <input type="password" matInput placeholder="パスワード(確認)" [(ngModel)]="user.passwordConfirm" name="passwordConfirm"  #passwordConfirm="ngModel" required minlength="8" pattern="password.value">
+        <input type="password" matInput placeholder="パスワード(確認)" [(ngModel)]="user.passwordConfirm" name="passwordConfirm"  #passwordConfirm="ngModel" required minlength="8">
         <mat-error *ngIf="passwordConfirm.invalid && passwordConfirm.errors.required">
             {{ errorMessages.required }}
         </mat-error>
         <mat-error *ngIf="passwordConfirm.invalid && passwordConfirm.errors.minlength">
             {{ errorMessages.passwordMinLength }}
-        </mat-error>
-        <mat-error *ngIf="passwordConfirm.invalid && passwordConfirm.errors.pattern">
-            abc
         </mat-error>
       </mat-form-field>
       <br>
