--- a/src/app/micropost-list/micropost-list.component.html
+++ b/src/app/micropost-list/micropost-list.component.html
@@ -1,11 +1,13 @@
-<mat-list>
-
-  <mat-list-item *ngFor="let micropost of microposts">
-    <p class="content">{{micropost.content}}</p>
-    <p class="footer">
-      {{micropost.created_at | date:'yyyy/MM/dd HH:mm:ss'}}
-      <button mat-button (click)="deletePost(micropost.id)">delete</button>
-    </p>
-  </mat-list-item>
-
-</mat-list>
+<mat-card>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item *ngFor="let micropost of microposts">
+        <p class="content">{{micropost.content}}</p>
+        <p class="footer">
+          {{micropost.created_at | date:'yyyy/MM/dd HH:mm:ss'}}
+          <button mat-button (click)="deletePost(micropost.id)">delete</button>
+        </p>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
+</mat-card>
