--- a/src/app/micropost-entry/micropost-entry.component.html
+++ b/src/app/micropost-entry/micropost-entry.component.html
@@ -1,9 +1,17 @@
-<p>{{loginUser.name}}</p>
-<p>
-  <mat-form-field>
-    <textarea matInput placeholder="つぶやき" [(ngModel)]="post.content" name="content" #content="ngModel">
-    </textarea>
-  </mat-form-field>
-  <br>
-  <button mat-raised-button color="primary" (click)="execMicropost(content.value)" >つぶやく</button>
-</p>
+<mat-card>
+  <mat-card-content>
+    <p>{{loginUser.name}}</p>
+    <p>
+      <mat-form-field>
+        <textarea matInput placeholder="つぶやき" [(ngModel)]="post.content" name="content" #content="ngModel">
+        </textarea>
+      </mat-form-field>
+    </p>
+  </mat-card-content>
+
+  <mat-card-actions>
+      <button mat-raised-button color="primary" (click)="execMicropost(content.value)" >つぶやく</button>
+  </mat-card-actions>
+
+</mat-card>
+
