--- a/src/app/micropost-list/micropost-list.component.scss
+++ b/src/app/micropost-list/micropost-list.component.scss
@@ -1,11 +1,11 @@
-mat-list-item p {
+mat-list-item {
 
-  .content {
-    font-size: 12px;
+  p.content {
+    font-size: 14px;
     white-space: pre-wrap;
   }
 
-  .footer {
+  p.footer {
     border-bottom: solid 1px;
     font-size: 8px;
   }
