Modify template error

--- a/src/app/micropost-entry/micropost-entry.component.html
+++ b/src/app/micropost-entry/micropost-entry.component.html
@@ -5,5 +5,5 @@
     </textarea>
   </mat-form-field>
   <br>
-  <button mat-raised-button color="primary" (click)="execMicropost(content.value)" >つぶやく</button>
+  <button mat-raised-button color="primary" (click)="execMicropost()" >つぶやく</button>
 </p>
